--- a/biome.jsonc
+++ b/biome.jsonc
@@ -1,5 +1,13 @@
 {
   "$schema": "https://biomejs.dev/schemas/1.7.1/schema.json",
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
+  },
+  "files": {
+    "ignore": ["package.json"]
+  },
   "organizeImports": {
     "enabled": true
   },
