--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
+      - run: corepack enable
       - run: yarn install --frozen-lockfile
       - run: yarn version --${{ github.event.inputs.bump_type }}
       - name: Push tag to GitHub
