--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,7 @@ jobs:
         with:
           cache: 'yarn'
           node-version: ${{ matrix.node-version }}
+      - run: corepack enable
       - run: yarn install --frozen-lockfile
       - run: yarn lint
       - run: yarn test
