--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "node": ">= 18"
   },
   "main": "bin/index.mjs",
-  "bin": {
-    "suppress-biome-errors": "./bin/index.mjs"
-  },
+  "bin": "./bin/index.mjs",
   "files": [
     "bin/index.mjs",
     "transforms/suppress-biome-errors.ts"
@@ -51,6 +49,7 @@
   "devDependencies": {
     "@biomejs/biome": "1.7.1",
     "@jest/globals": "^29.7.0",
+    "@types/cross-spawn": "^6.0.6",
     "@types/find-config": "^1.0.4",
     "@types/jscodeshift": "^0.11.11",
     "jest": "29.7.0",
@@ -58,5 +57,6 @@
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "5.4.5"
-  }
+  },
+  "packageManager": "yarn@4.2.1"
 }
