--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,7 +29,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: corepack enable
       - run: yarn install --frozen-lockfile
-      - run: yarn version --${{ github.event.inputs.bump_type }}
+      - run: yarn version ${{ github.event.inputs.bump_type }}
       - name: Push tag to GitHub
         run: |
           git push
