--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,6 +20,6 @@ jobs:
           cache: 'yarn'
           node-version: ${{ matrix.node-version }}
       - run: corepack enable
-      - run: yarn install --frozen-lockfile
+      - run: yarn install --immutable --immutable-cache
       - run: yarn lint
       - run: yarn test
