--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,8 @@ jobs:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
       - run: corepack enable
-      - run: yarn install --frozen-lockfile
-      - run: yarn version --${{ github.event.inputs.bump_type }}
+      - run: yarn install --immutable --immutable-cache
+      - run: yarn version ${{ github.event.inputs.bump_type }}
       - name: Push tag to GitHub
         run: |
           git push
